# horizonengine

./: CONTRIBUTING.md  Cargo.toml  LICENSE
.agent/rules/: rust-pro.md
.github/workflows/: cross.yml  rust.yml  test.yml
src/: lib.rs  main.rs
src/ai/: fsm.rs  mod.rs  pathfinding.rs  steering.rs
src/animation/: clip.rs  player.rs  skeleton.rs
src/assets/: handle.rs  mod.rs  storage.rs
src/audio/: manager.rs  mod.rs  source.rs
src/core/: debug.rs  engine.rs  events.rs  mod.rs  scene.rs
src/ecs/: cached.rs  components.rs  hierarchy.rs  mod.rs  world.rs
src/input/: command.rs  mod.rs  state.rs
src/physics/: mod.rs  physics.rs  world.rs
src/renderer/: camera.rs  context.rs  lights.rs  material.rs  mesh.rs  mod.rs  particle.wgsl  particles.rs  pool.rs  postprocess.rs  postprocess.wgsl  renderer.rs  shader.wgsl  shadow.rs  shadow_depth.wgsl  skybox.rs  skybox.wgsl  texture.rs  ui.wgsl
src/ui/: rect.rs
