[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Windowing and input
winit = "0.30"

# Graphics (GPU abstraction)
wgpu = "23.0"

# Math library for graphics
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# ECS (Entity Component System)
hecs = "0.10"

# Physics engine
rapier3d = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
image = { version = "0.25.9", features = ["png", "jpeg"] }
smallvec = "1.15.1"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ron = "0.12.0"
gltf = "1.4.1"
rustc-hash = "2.1.1"
